--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "croner": "^8.0.1",
     "dotenv": "^16.4.5",
     "ethers": "^5.7.2",
+    "node-cron": "^3.0.3",
     "typescript": "^5.4.3",
     "viem": "^2.8.16"
   },
