--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,5 @@
-AIRSTACK_API_KEY=""
-
-# private key of the wallet controlling the bot
-KEY=""
-
-# production or development
-XMTP_ENV=""
-
-# the redis connection url, you can get one on https://upstash.com/
-REDIS_CONNECTION_STRING=""
+AIRSTACK_API_KEY= # your Airstack API key
+KEY= # the private key of the bot
+XMTP_ENV= #the xmtp network production or dev
+REDIS_CONNECTION_STRING= # redis connection string for caching
+PUBLIC_FRAME_URL= # deployed vercel frame url
