fix caching nfts: add retrocompatibility, fix ts paths, fix readme .env.example

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,5 @@ KEY= # the private key of the bot
 XMTP_ENV= #the xmtp network production or dev
 REDIS_CONNECTION_STRING= # redis connection string for caching
 PUBLIC_FRAME_URL= # deployed vercel frame url
+MIX_PANEL= # mixpanel project token
+DEBUG= # true if debug mode
