--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,11 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "strictPropertyInitialization": false,
-    "skipLibCheck": true
-  }
+    "skipLibCheck": true,
+    "paths": {
+      "*": ["node_modules/*", "src/types/*"]
+    },
+  },
+  "include": ["src/**/*"],
+  "exclude": ["node_modules"]
 }
