--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,10 +19,6 @@
     "strict": true,
     "strictPropertyInitialization": false,
     "skipLibCheck": true,
-    "paths": {
-      "*": ["node_modules/*", "src/types/*"]
-    },
-  },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules"]
+    "noImplicitAny": false
+  }
 }
