--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@airstack/node": "^0.0.5",
     "@redis/client": "^1.5.14",
     "@xmtp/botkit": "^1.0.8",
+    "@xmtp/redis-persistence": "^0.0.4",
     "mixpanel": "^0.18.0",
     "node-cron": "^3.0.3"
   }
