--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "dependencies": {
     "@airstack/node": "^0.0.5",
     "@redis/client": "^1.5.14",
-    "@xmtp/botkit": "latest",
+    "@xmtp/botkit": "^2.3.1",
     "@xmtp/redis-persistence": "^0.0.4",
     "mixpanel": "^0.18.0",
     "node-cron": "^3.0.3"
