--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "build:watch": "tsc -w",
-    "start:watch": "nodemon dist/src/index.js",
-    "start": "node dist/src/index.js",
+    "dev": "tsc -w & sleep 1 && nodemon --quiet dist/index.js",
+    "dev:bun": "tsc -w & sleep 1 && bun run --watch dist/index.js",
+    "start": "node dist/index.js",
     "generate": "npx graphql-codegen",
     "prestart": "yarn generate",
     "predev": "yarn generate"
@@ -21,9 +21,12 @@
   "dependencies": {
     "@airstack/node": "^0.0.5",
     "@redis/client": "^1.5.14",
-    "@xmtp/botkit": "^2.3.2",
+    "@xmtp/message-kit": "^2.3.2",
     "@xmtp/redis-persistence": "^0.0.4",
     "mixpanel": "^0.18.0",
     "node-cron": "^3.0.3"
+  },
+  "engines": {
+    "node": ">=20"
   }
 }
